# pruna-video-animate

./: .env.example  .gitignore  README.md  pyproject.toml
src/pruna_video_animate/: __init__.py  cli.py  client.py  config.py  errors.py
tests/: test_cli.py  test_client.py
