[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pruna-video-animate"
version = "0.1.0"
description = "Animate a reference image with Pruna p-video-animate using a local reference video."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.1",
]

[project.scripts]
pruna-animate = "pruna_video_animate.cli:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
